--- a/css/style.css
+++ b/css/style.css
@@ -114,26 +114,30 @@ body::-webkit-scrollbar-thumb:hover {
 .main{
 	width: 100%;
 	height: 100vh;
-	background: linear-gradient(to top,rgba(0,240,111,0.5),rgba(0,255,47,0.5)), url(https://img4.goodfon.ru/original/1920x1080/4/ab/art-anime-devushka-les-otdykh-leto-bliki-shkolnitsa.jpg);
+	background: linear-gradient(to top,rgba(0,240,111,0.5),rgba(0,255,47,0.5)), url(../images/bg.jpg);
 	z-index: 1; 
-	position: absolute; 
-	background-size: 100%;
+	background-size: cover;
+	background-position: 65%;
+	background-repeat: no-repeat;
+	position: relative;
 }
 .text-main{
-	position: relative;
+	position: absolute;
 	text-align: center;
-	top: 27%;
+	left:50%;
+	top:50%;
+	margin:-250px 0 0 -340px;
 	color: #fff;
 }
 .text-main h1{
 	font-weight: bold;
-	font-size: 4rem;
+	font-size: 5rem;
 	text-transform: uppercase;
 	text-shadow: black 0 0 20px;
 }
 .text-main p{
 	margin-top: 20px;
-	font-size: 1.5rem;
+	font-size: 2rem;
 	font-family: 'Comfortaa';
 	font-weight: bold;
 	text-shadow: black 0 0 10px;
@@ -143,42 +147,10 @@ body::-webkit-scrollbar-thumb:hover {
 	border: 6px solid white;
 	box-shadow: 0 0 21px white;
 }
-.circular-arrow {
-  width: 58px;
-  height: 58px;
-  border: 2px solid black;
-  border-radius: 100%;
-  position: relative;
-  animation: down 1.5s infinite;
-  margin: 22% 48.5%;
-  box-sizing: border-box;
-}
-.circular-arrow::before {
-  content: '';
-  position: absolute;
-  top: 15px;
-  left: 18px;
-  width: 18px;
-  height: 18px;
-  border-left: 2px solid black;
-  border-bottom: 2px solid black;
-  transform: rotate(-45deg);
-}
-@keyframes down {
-  0% {
-  transform: translate(0);
-  }
-  40% {
-  transform: translateY(30px);
-  }
-  80% {
-  transform: translate(0);
-  }
-}
 
 .line{
-	position: relative;
-	top: 100vh;
+	position: absolute;
+	top: 100%;
 	width: 100%;
 	height: 10px;
 	background-color: #000;
@@ -187,17 +159,17 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .first{
-	top: 100vh;
-	position: relative;
 	width: 100%;
 	height: 100vh;
-	background: linear-gradient(to top, rgba(0,140,255,0.5), rgba(0,245,255,0.5)), url(https://www.wallpaperflare.com/static/199/746/446/blue-hair-anime-anime-girls-blue-wallpaper.jpg);
-	background-size: 100%;
+	background: linear-gradient(to top, rgba(0,140,255,0.5), rgba(0,245,255,0.5)), url(../images/bg2.jpg);
+	background-size: cover;
+	background-position: 65%;
+	position: relative;
 }
 .chat{
+	top: 2vh;
 	position: relative;
 	text-align: center;
-	top: 5%;
 	color: #fff;
 }
 .chat h1{
@@ -223,7 +195,7 @@ body::-webkit-scrollbar-thumb:hover {
 .ban{
 	position: relative;
 	text-align: center;
-	top: 13%;
+	top: 10vh;
 	color: #fff;
 }
 .ban h1{
@@ -249,12 +221,11 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .second{
-	position: relative;
-	top: 100vh;
 	width: 100%;
 	height: 130vh;
 	background: linear-gradient(to top, rgba(98,0,255,0.5), rgba(140,0,255,0.5)), url(https://wallpaperaccess.com/full/368684.jpg);
-	background-size: 120%;
+	background-size: cover;
+	background-position: 75%;
 }
 .pidor{
 	position: relative;
